[package]
name = "speedgate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
